--- a/vocab-explorer.html
+++ b/vocab-explorer.html
@@ -5,43 +5,69 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Bibliography of British and Irish History vocabulary explorer UI">
-    <meta name="keywords" content="Institute of Historical Research, IHR, BBIH, Tobias, volcabulary, bibliography" />
+    <meta name="description" content="Vocabulary explorer UI - works locally without a server">
 
-    <title>RHS Vocabulary explorer</title>
+    <title>Vocabulary Explorer (Local)</title>
 
-    <!-- Jquery from the CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-
-    <!-- jsTree jquery libs -->
     <link rel="stylesheet" href="./js/jstree/themes/proton/style.css" />
     <script type="text/javascript" src="./js/jstree/jstree.min.js"></script>
-
-    <!-- qTip2 tooltips libs -->
     <link rel="stylesheet" href="./js/qtip/jquery.qtip.min.css" />
     <script src="./js/qtip/jquery.qtip.min.js"></script>
-
-    <!-- Tobias Explorer - css and js setup scripts -->
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/tobias-vocab.js"></script>
+    <script type="text/javascript" src="./js/tobias-vocab-filepicker.js"></script>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-23271440-17', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <style>
+      #file-picker-container {
+        background: #f5f5f5;
+        border: 2px dashed #ccc;
+        border-radius: 8px;
+        padding: 40px;
+        text-align: center;
+        margin: 20px 0;
+      }
+      #file-picker-container.drag-over {
+        border-color: #4a90d9;
+        background: #e8f0fa;
+      }
+      #file-picker-container h2 { margin-top: 0; color: #333; }
+      #file-picker-container p { color: #666; margin-bottom: 20px; }
+      #vocab-file-input { display: none; }
+      #file-picker-btn {
+        background: #4a90d9;
+        color: white;
+        border: none;
+        padding: 12px 24px;
+        font-size: 16px;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      #file-picker-btn:hover { background: #357abd; }
+      #file-name-display { margin-top: 15px; font-style: italic; color: #666; }
+      #load-error { color: #d9534f; margin-top: 15px; display: none; }
+      .hidden { display: none !important; }
+    </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>RHS Vocabulary Explorer</h1>
-        <div id='sticky-header'>
-          <p><input type="text" value="" id="search-input" placeholder="Search">
-          or <button type='button' id='toggleSyns' accesskey='t'>show/hide</button> the <span class="usedFor-info">non-preferred</span> and <span class="relatedTerm-info">related</span> terms in the tree.</p>
+        <h1>Vocabulary Explorer</h1>
+        
+        <div id="file-picker-container">
+          <h2>Load a Vocabulary File</h2>
+          <p>Select an HTML vocabulary file (e.g., bbih-vocabulary.html) to explore.</p>
+          <input type="file" id="vocab-file-input" accept=".html,.htm">
+          <button type="button" id="file-picker-btn">Choose File...</button>
+          <div id="file-name-display"></div>
+          <div id="load-error"></div>
+        </div>
+
+        <div id='sticky-header' class="hidden">
+          <p>
+            <button type='button' id='load-new-file' style="margin-right: 10px;">Load different file</button>
+            <input type="text" value="" id="search-input" placeholder="Search">
+            or <button type='button' id='toggleSyns' accesskey='t'>show/hide</button> the <span class="usedFor-info">non-preferred</span> and <span class="relatedTerm-info">related</span> terms in the tree.
+          </p>
           <p id='breadcrumb'></p>
         </div>
       </header>
@@ -51,8 +77,7 @@
       </section>
 
       <footer>
-        <p class="view"><a href="https://github.com/ihr-digital/vocab-explorer">View the Project on GitHub <small></small></a></p>
-        <p><small>Hosted on GitHub Pages — <a href="https://github.com/pages-themes/minimal">Minimal theme</a></small></p>
+        <p class="view"><a href="https://github.com/ihr-digital/vocab-explorer">View the Project on GitHub</a></p>
       </footer>
     </div>
   </body>
