--- a/vocab-explorer.html
+++ b/vocab-explorer.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./js/qtip/jquery.qtip.min.css" />
     <script src="./js/qtip/jquery.qtip.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/tobias-vocab-filepicker.js"></script>
+    <script type="text/javascript" src="./js/tobias-vocab.js"></script>
 
     <style>
       #file-picker-container {
